# Authorized-DevOps-Agent

./: .gitignore  README.md  docker-compose.yml  env.example  index.html  main.py  pyproject.toml  results_script.md  test_all_agents.sh
docker/: Dockerfile.code_execution  Dockerfile.digest  Dockerfile.orchestrator  Dockerfile.planner  Dockerfile.progress  Dockerfile.risks  Dockerfile.static
docs/: AGENT_COMPARISON.md  API.md  Architecture.md  DEPLOYMENT.md  JUDGES_GUIDE.md
docs/diagrams/: architecture.puml  sequence.puml
src/agents/code_execution/: agent.py  main.py
src/agents/digest/: agent.py  main.py
src/agents/orchestrator/: agent.py  main.py
src/agents/planner/: agent.py  main.py
src/agents/progress/: agent.py  main.py
src/agents/risks/: agent.py  main.py
src/shared/: auth0_token_vault.py  cors.py  error_handler.py  llm_client.py  mcp_base.py  metrics.py  models.py  utils.py
